0.7
===

Fassembler changes
------------------

* Added a new `tasks.InstallSpecIfPresent` which checks if the path
  to the requirements spec is present on the filesystem, and does
  nothing if the file does not exist.

Project changes
---------------

* fassembler:topp now installs requirements/fassembler-req.txt into 
  the fassembler virtualenv if that file is present.  This file can
  specify add-on packages that provide additional fassembler projects
  to be used in the rest of the build.

  This action was previously done by the `rebuild-opencore-site` script
  in `opencore-fassembler_boot` and is being moved here for better
  encapsulation of builds.  (A build *should* be able to be run entirely
  from fassembler; opencore-fassembler_boot should just be a convenience
  package that wraps fassembler's more arcane knowledge.)

0.6
===

Fassembler changes
------------------

* Fassembler has hardcoded expectations that the user's $LANG is
  English -- Maker._get_repo_url parses an error message from
  Subversion with the assumption that it is in English. This manifests
  when running fassembler:topp while it runs `svn info` on the etc
  directory in a new build, which will exist as an unversioned
  directory.

  It now works if the user's $LANG is Spanish, as well.  But no other
  languages!

  Of course, this is extremely silly, and should be fixed more
  properly immediately.

* When installing a virtualenv, install setuptools 0.6c11 into the new
  virtualenv, always.  This prevents problems on systems whose
  virtualenv version installs the broken setuptools 0.6c8 by
  default. Symptoms: errors like "unrecognized format" and "global
  name 'log' is not defined".

* Fix sporadic bug in projects where ``use_pip=True``: "The expected
  executable ['pip', '-E', ...] was not found."  When
  ``use_pip=True``, Fassembler will now ``easy_install pip`` during
  virtualenv creation, and will add the ``virtualenv_bin_path`` to $PATH